[package]
name = "rustchain"
version = "0.1.0"
edition = "2021"
authors = ["dhruvji dhruvgautam@berkeley.edu inspired from tensor-programming"]
repository = "https://github.com/dhruvji/rustchain.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.1"
